introduce hasTextDescendant flag for inline boxes. hasTextChildren is good for evaluating a root's strut immediate relevance, but not for top/bottom overflow and other quirky shrinking. Those need depth.

BUG: 131366


svn path=/branches/KDE/3.5/kdelibs/; revision=576084